--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-android∑¥±‡“Î/apk/*
-android∑¥±‡“Î/dex2jar-2.0/*
-android∑¥±‡“Î/jd-gui/*
+./android∑¥±‡“Î/apk/*
+./android∑¥±‡“Î/dex2jar-2.0/*
+./android∑¥±‡“Î/jd-gui/*
