--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@
 ./android·´±àÒë/jd-gui/*
 ~*
 unitystudio/*
-android¿¿¿/*
-android¿¿¿/*
 tools/3rd/NGUI Next-Gen UI 3.10.2.unitypackage
-android\345\217\215\347\274\226\350\257\221/apk/
+unityµÄ¶¯»­/¹Ç÷À¶¯»­Àý×Ó/
 
+*
