--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-./android·´±àÒë/apk/*
-./android·´±àÒë/dex2jar-2.0/*
-./android·´±àÒë/jd-gui/*
 ~*
-unitystudio/*
+*.tmp
 tools/3rd/NGUI Next-Gen UI 3.10.2.unitypackage
-
-
-*
+unitystudio/
+unityçš„åŠ¨ç”»/éª¨éª¼åŠ¨ç”»ä¾‹å­/
